--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">&lt;h1&gt;Jay Patel Jubilant Panther&lt;/h1&gt;</span></p>
+<p class="p1"><span class="s1">&lt;h1&gt;Jay Patel Jubilant Panther- ITIS3135&lt;/h1&gt;</span></p>
 </body>
 </html>
