--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,3 +1,52 @@
-I am Jay Patel and this is my ITIS3135 First Course Page
-
-<h1>Jay Patel is a Jubliant Panther</h1><h2>Welcome to my ITIS3135 Site</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jay Patel || ITIS 3135 Homepage</title>
+    <link rel="stylesheet" href="styles/default.css">
+</head>
+<body>
+    <header>
+        <h1> Jay Patel || ITIS 3135</h1>
+        <nav>
+            <a href = "./"> Homepage</a>
+            ||
+            <a href = "introduction.html"> Introduction </a>
+            ||
+            <a href = "contract.html">Contract</a>
+            ||
+            <a href= "/"> Back to Main Site</a>
+        </nav>
+    </header>
+    <main> 
+        <h2> Jay Patel || ITIS 3135 Homepage</h2>
+        <p> This is all the content for my ITIS 3135 class.</p>
+    </main>
+    <footer> 
+        <nav>
+            <a href = "https://webpages.charlotte.edu/jpate152/"></a>
+            ||
+            <a href = "https://github.com/jayp-8"> </a>
+            ||
+            <a href = "https://jayp-8.github.io"> </a>
+            ||
+            <a href = "https://jayp-8.github.io/itis3135/"> </a>
+            ||
+            <a href = "https://www.freecodecamp.org/jayp-8"> </a>
+            ||
+            <a href = "https://www.codecademy.com/profiles/jayp-8"> </a>
+            ||
+            <a href = "https://www.linkedin.com/in/jay-patel-a6a126205/"> </a>
+        
+        </nav>
+        <p> Page Built by Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
+            <img style="border:0;width:88px;height:31px" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_ HTML5_certified.png" alt="Valid HTML!">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+            </a>
+        </p>
+    </footer>
+</body>
+</html>
