--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,8 +1,66 @@
 <!DOCTYPE html>
-<h1 id="title">Contract</h1>
-<p> I, Jay Patel agree to abide by the terms in my Fall 2023 ITIS-3135-091 Web App Design and Development with my instructor, D.I. Von Briesen. </p>
-<p> I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private. </p>
+<html lang="en">
 
-<p> Signed: </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jay Patel || ITIS 3135 Contract</title>
+    <link rel="stylesheet" href="styles/default.css">
+</head>
 
-    <p> Jay Patel, 5 September 2023 </p>
+<body>
+    <header>
+        <h1> Jay Patel || ITIS 3135</h1>
+        <nav>
+            <a href="./"> Contract</a>
+            ||
+            <a href="introduction.html"> Introduction </a>
+            ||
+            <a href="contract.html">Contract</a>
+            ||
+            <a href="/"> Back to Main Site</a>
+        </nav>
+    </header>
+    <main>
+        <h1 id="title">Contract</h1>
+        <p> I, Jay Patel agree to abide by the terms in my Fall 2023 ITIS-3135-091 Web App Design and Development with
+            my instructor, D.I. Von Briesen. </p>
+        <p> I understand that all work that I do on my school and personal websites will be publicly available to the
+            world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep
+            private. </p>
+
+        <p> Signed: </p>
+
+        <p> Jay Patel, 5 September 2023 </p>
+    </main>
+    <footer>
+        <nav>
+            <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
+            ||
+            <a href="https://github.com/jayp-8"> Github</a>
+            ||
+            <a href="https://jayp-8.github.io"> Github.io</a>
+            ||
+            <a href="https://jayp-8.github.io/itis3135/"> Github.io</a>
+            ||
+            <a href="https://www.freecodecamp.org/jayp-8"> ITIS3135.io</a>
+            ||
+            <a href="https://www.codecademy.com/profiles/jayp-8"> freeCodeCamp</a>
+            ||
+            <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
+
+        </nav>
+        <p> Page Built by Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_ HTML5_certified.png"
+                    alt="Valid HTML!">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!">
+            </a>
+        </p>
+    </footer>
+</body>
+
+</html>
