--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -55,19 +55,19 @@
     </main>
     <footer> 
         <nav>
-            <a href = "https://webpages.charlotte.edu/jpate152/"></a>
+            <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
             ||
-            <a href = "https://github.com/jayp-8"> </a>
+            <a href="https://github.com/jayp-8"> Github</a>
             ||
-            <a href = "https://jayp-8.github.io"> </a>
+            <a href="https://jayp-8.github.io"> Github.io</a>
             ||
-            <a href = "https://jayp-8.github.io/itis3135/"> </a>
+            <a href="https://jayp-8.github.io/itis3135/"> Github.io</a>
             ||
-            <a href = "https://www.freecodecamp.org/jayp-8"> </a>
+            <a href="https://www.freecodecamp.org/jayp-8"> ITIS3135.io</a>
             ||
-            <a href = "https://www.codecademy.com/profiles/jayp-8"> </a>
+            <a href="https://www.codecademy.com/profiles/jayp-8"> freeCodeCamp</a>
             ||
-            <a href = "https://www.linkedin.com/in/jay-patel-a6a126205/"> </a>
+            <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
         
         </nav>
         <p> Page Built by Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
