--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -22,7 +22,7 @@
     <main> 
         <figure>
             <img src="https://keep.google.com/u/1/media/v2/1hMZusvsOw9F7xowWvmY3wyt2IPiUFVxcscN0LvXsVidJkCC05lyX79QLm3HINRVC/1UmmRwuSNqDrpcYZcfr3fdaMj6YfCtgBvFvlIwPnQI8RS_dDoGRysAXTuXpVYRSc?sz=512&accept=image%2Fgif%2Cimage%2Fjpeg%2Cimage%2Fjpg%2Cimage%2Fpng%2Cimage%2Fwebp" al="Profile Image" width="200" height ="200">
-            <figcaption class="caption-italic">Old Quebec, Canada</figcaption>
+            <figcaption class="caption-italic">Jubilant Panther</figcaption>
         </figure>
         <h1> Introduction</h1>
         <section>
