--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jay Patel || ITIS 3135 Contract</title>
+    <title>Jay Patel Jubilant Panther|| ITIS 3135 Contract</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 
@@ -17,8 +17,6 @@
             <a href="introduction.html"> Introduction </a>
             ||
             <a href="contract.html">Contract</a>
-            ||
-            <a href="/"> Back to Main Site</a>
         </nav>
     </header>
     <main>
@@ -41,11 +39,11 @@
             ||
             <a href="https://jayp-8.github.io"> Github.io</a>
             ||
-            <a href="https://jayp-8.github.io/itis3135/"> Github.io</a>
+            <a href="https://jayp-8.github.io/itis3135/"> ITIS3135.io</a>
             ||
-            <a href="https://www.freecodecamp.org/jayp-8"> ITIS3135.io</a>
+            <a href="https://www.freecodecamp.org/jayp-8"> FreeCodeCamp </a>
             ||
-            <a href="https://www.codecademy.com/profiles/jayp-8"> freeCodeCamp</a>
+            <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
