--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jay Patel || ITIS 3135 Homepage</title>
+    <title>Jay Patel Jubilant Panther|| ITIS 3135 Home</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
@@ -15,8 +15,6 @@
             <a href = "introduction.html"> Introduction </a>
             ||
             <a href = "contract.html">Contract</a>
-            ||
-            <a href= "/"> Back to Main Site</a>
         </nav>
     </header>
     <main> 
@@ -31,11 +29,11 @@
             ||
             <a href="https://jayp-8.github.io"> Github.io</a>
             ||
-            <a href="https://jayp-8.github.io/itis3135/"> Github.io</a>
+            <a href="https://jayp-8.github.io/itis3135/"> ITIS3135.io</a>
             ||
-            <a href="https://www.freecodecamp.org/jayp-8"> ITIS3135.io</a>
+            <a href="https://www.freecodecamp.org/jayp-8"> FreeCodeCamp </a>
             ||
-            <a href="https://www.codecademy.com/profiles/jayp-8"> freeCodeCamp</a>
+            <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
         
