--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jay Patel || ITIS 3135 Introduction</title>
+    <title>Jay Patel Jubilant Panther || ITIS 3135 Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
     <header>
         <h1> Jay Patel || ITIS 3135</h1>
         <nav>
-            <a href = "./"> Homepage</a>
+            <a href = "./"> Home</a>
             ||
             <a href = "introduction.html"> Introduction </a>
             ||
             <a href = "contract.html">Contract</a>
-            ||
-            <a href= "/"> Back to Main Site</a>
         </nav>
     </header>
     <main> 
@@ -61,11 +59,11 @@
             ||
             <a href="https://jayp-8.github.io"> Github.io</a>
             ||
-            <a href="https://jayp-8.github.io/itis3135/"> Github.io</a>
+            <a href="https://jayp-8.github.io/itis3135/"> ITIS3135.io</a>
             ||
-            <a href="https://www.freecodecamp.org/jayp-8"> ITIS3135.io</a>
+            <a href="https://www.freecodecamp.org/jayp-8"> FreeCodeCamp </a>
             ||
-            <a href="https://www.codecademy.com/profiles/jayp-8"> freeCodeCamp</a>
+            <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
         
