--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <h1> Jay Patel || ITIS 3135</h1>
+        <h1> Jay Patel Jubilant Panther|| ITIS 3135 Home</h1>
         <nav>
-            <a href = "./"> Homepage</a>
+            <a href = "./"> Home</a>
             ||
             <a href = "introduction.html"> Introduction </a>
             ||
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main> 
-        <h2> Jay Patel || ITIS 3135 Homepage</h2>
+        <h2> Jay Patel || ITIS 3135 Home</h2>
         <p> This is all the content for my ITIS 3135 class.</p>
     </main>
     <footer> 
