--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1> Jay Patel || ITIS 3135</h1>
+        <h1> Jay Patel Jubilant Panther|| ITIS 3135 Contract</h1>
         <nav>
             <a href="./"> Contract</a>
             ||
