--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1> Jay Patel || ITIS 3135</h1>
+        <h1> Jay Patel Jubilant Panther || ITIS 3135 Introduction</h1>
         <nav>
             <a href = "./"> Home</a>
             ||
