--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -12,7 +12,7 @@
     <header>
         <h1> Jay Patel Jubilant Panther|| ITIS 3135 Contract</h1>
         <nav>
-            <a href="./"> Contract</a>
+            <a href="./"> Home</a>
             ||
             <a href="introduction.html"> Introduction </a>
             ||
