--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jay Patel Jubilant Panther || ITIS 3135 Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
+
 <body>
     <header>
         <h1> Jay Patel Jubilant Panther || ITIS 3135 Introduction</h1>
         <nav>
-            <a href = "./"> Home</a>
+            <a href="./"> Home</a>
             ||
-            <a href = "introduction.html"> Introduction </a>
+            <a href="introduction.html"> Introduction </a>
             ||
-            <a href = "contract.html">Contract</a>
+            <a href="contract.html">Contract</a>
         </nav>
     </header>
-    <main> 
+    <main>
         <figure>
-            <img src="https://keep.google.com/u/1/media/v2/1hMZusvsOw9F7xowWvmY3wyt2IPiUFVxcscN0LvXsVidJkCC05lyX79QLm3HINRVC/1UmmRwuSNqDrpcYZcfr3fdaMj6YfCtgBvFvlIwPnQI8RS_dDoGRysAXTuXpVYRSc?sz=512&accept=image%2Fgif%2Cimage%2Fjpeg%2Cimage%2Fjpg%2Cimage%2Fpng%2Cimage%2Fwebp" al="Profile Image" width="200" height ="200">
+            <img src="https://keep.google.com/u/1/media/v2/1hMZusvsOw9F7xowWvmY3wyt2IPiUFVxcscN0LvXsVidJkCC05lyX79QLm3HINRVC/1UmmRwuSNqDrpcYZcfr3fdaMj6YfCtgBvFvlIwPnQI8RS_dDoGRysAXTuXpVYRSc?sz=512&accept=image%2Fgif%2Cimage%2Fjpeg%2Cimage%2Fjpg%2Cimage%2Fpng%2Cimage%2Fwebp"
+                al="Profile Image" width="200" height="200">
             <figcaption class="caption-italic">Jubilant Panther</figcaption>
         </figure>
         <h1> Introduction</h1>
         <section>
-            <p> Personal Background: I was born in NJ and grew up in Raleigh. I have an older sister who attends UNC Chapel Hill.</p>
+            <p> Personal Background: I was born in NJ and grew up in Raleigh. I have an older sister who attends UNC
+                Chapel Hill.</p>
         </section>
         <section>
             <p> Professional Background: I have experience in retail customer service with Harris Teeter.</p>
         </section>
         <section>
-            <p> Academic Background: I am a junior pursuing a BS in computer science with a concentration in software engineering and a math minor.</p>
+            <p> Academic Background: I am a junior pursuing a BS in computer science with a concentration in software
+                engineering and a math minor.</p>
         </section>
         <section>
-            <p> Background in this Subject: I have started a Udemy course on Web development but paused it after registering for this class.  </p>
+            <p> Background in this Subject: I have started a Udemy course on Web development but paused it after
+                registering for this class. </p>
         </section>
         <section>
-            <p> Primary Computer Platform:  A Macbook Pro M1 2020 with 8 Gb RAM.  </p>
+            <p> Primary Computer Platform: A Macbook Pro M1 2020 with 8 Gb RAM. </p>
         </section>
         <section>
             <p> Courses I'm Taking & Why: <br>
-                ITSC 3146 - Intro to Operating Systems & Networking: Gain insights into the foundational principles and mechanisms of operating systems and learn C++. <br>
-                ITIS 3130 - Human-Centered Design: Work on collaborative project building that focuses on user interface and functionality. <br>
-                ITIS 3135 - Web-Based Application Design and Development: I want to be able to build websites from scratch. <br>
-                ITCS 3160 - Database Design and Implementation: Focused on learning SQL for effective data management. <br>
-                METR 1102- Introduction to Meteorology: Have always had a lifelong interest in weather events like the tropics and snowstorms 
+                ITSC 3146 - Intro to Operating Systems & Networking: Gain insights into the foundational principles and
+                mechanisms of operating systems and learn C++. <br>
+                ITIS 3130 - Human-Centered Design: Work on collaborative project building that focuses on user interface
+                and functionality. <br>
+                ITIS 3135 - Web-Based Application Design and Development: I want to be able to build websites from
+                scratch. <br>
+                ITCS 3160 - Database Design and Implementation: Focused on learning SQL for effective data management.
+                <br>
+                METR 1102- Introduction to Meteorology: Have always had a lifelong interest in weather events like the
+                tropics and snowstorms
             </p>
         </section>
         <section>
             <p> Funny/Interesting Item to Remember me by: I love spicy food! </p>
         </section>
     </main>
-    <footer> 
+    <footer>
         <nav>
             <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
             ||
@@ -66,15 +77,20 @@
             <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
-        
+
         </nav>
-        <p> Page Built by Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
-            <img style="border:0;width:88px;height:31px" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413" alt="Valid HTML!">
+        <p> <a href="https://jayp-8.github.io/itis3135/patel-enterprises.com">Page Built by Patel Enterprises © 2023 </a>
+            <a href="https://validator.w3.org/check?uri=referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
+                    alt="Valid HTML!">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!">
             </a>
         </p>
     </footer>
 </body>
+
 </html>
