--- a/itis3135/patel-enterprises.com/index.html
+++ b/itis3135/patel-enterprises.com/index.html
@@ -11,26 +11,10 @@
         <h1 style="text-align: center;"> Patel Enterprises</h1>
     </header>
     <main> 
-        <h2 style="text-align: center;"> Patel Enterprises</h2>
+        <h2 style="text-align: center;"> Home</h2>
         <p> This is where the content to my software company website will go.</p>
     </main>
     <footer> 
-        <nav>
-            <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
-            ||
-            <a href="https://github.com/jayp-8"> Github</a>
-            ||
-            <a href="https://jayp-8.github.io"> Github.io</a>
-            ||
-            <a href="https://jayp-8.github.io/itis3135/"> ITIS3135.io</a>
-            ||
-            <a href="https://www.freecodecamp.org/jayp-8"> FreeCodeCamp </a>
-            ||
-            <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
-            ||
-            <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
-        
-        </nav>
         <p> Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
             <img style="border:0;width:88px;height:31px" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413" alt="Valid HTML!">
             </a>
