--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -48,9 +48,10 @@
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
         </nav>
-        <p> Page Built by Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
+        <p> <a href="https://jayp-8.github.io/itis3135/patel-enterprises.com">Page Built by Patel Enterprises © 2023 </a>
+            <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
-                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_ HTML5_certified.png"
+                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
                     alt="Valid HTML!">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">
