--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -48,7 +48,7 @@
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
         </nav>
-        <p> <a href="https://jayp-8.github.io/itis3135/patel-enterprises.com">Page Built by Patel Enterprises © 2023 </a>
+        <p> <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023 </a>
             <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
                     src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
