--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -15,6 +15,10 @@
             <a href = "introduction.html"> Introduction </a>
             ||
             <a href = "contract.html">Contract</a>
+            ||
+            <a href="tables.html">Tables</a>
+            ||
+            <a href="forms.html">Forms</a>
         </nav>
     </header>
     <main> 
