--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1> Jay Patel Jubilant Panther || ITIS 3135 Introduction</h1>
+        <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
             <a href="./"> Home</a>
             ||
@@ -25,8 +25,7 @@
     </header>
     <main>
         <figure>
-            <img src="https://keep.google.com/u/1/media/v2/1hMZusvsOw9F7xowWvmY3wyt2IPiUFVxcscN0LvXsVidJkCC05lyX79QLm3HINRVC/1UmmRwuSNqDrpcYZcfr3fdaMj6YfCtgBvFvlIwPnQI8RS_dDoGRysAXTuXpVYRSc?sz=512&accept=image%2Fgif%2Cimage%2Fjpeg%2Cimage%2Fjpg%2Cimage%2Fpng%2Cimage%2Fwebp"
-                al="Profile Image" width="200" height="200">
+            <img src="images/meinquebec.jpeg" width="200" height="200">
             <figcaption class="caption-italic">Jubilant Panther</figcaption>
         </figure>
         <h1> Introduction</h1>
