--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1> Jay Patel || Jubilant Panther || ITIS 3135 Form</h1>
+        <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
             <a href="./"> Home</a>
             ||
