--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1> Jay Patel Jubilant Panther|| ITIS 3135 Home</h1>
+        <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
             <a href = "./"> Home</a>
             ||
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main> 
-        <h2> Jay Patel || ITIS 3135 Home</h2>
+        <h2> Home </h2>
         <p> This is all the content for my ITIS 3135 class.</p>
     </main>
     <footer> 
