--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -19,6 +19,11 @@
             <a href="tables.html">Tables</a>
             ||
             <a href="forms.html">Forms</a>
+            ||
+            <a href="website_evaluation.html">Website Evaluation</a>
+        </nav>
+        <nav>
+            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
         </nav>
     </header>
     <main> 
