--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -12,15 +12,20 @@
     <header>
         <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
-            <a href="./"> Home</a>
+            <a href = "./"> Home</a>
             ||
-            <a href="introduction.html"> Introduction </a>
+            <a href = "introduction.html"> Introduction </a>
             ||
-            <a href="contract.html">Contract</a>
+            <a href = "contract.html">Contract</a>
             ||
             <a href="tables.html">Tables</a>
             ||
             <a href="forms.html">Forms</a>
+            ||
+            <a href="website_evaluation.html">Website Evaluation</a>
+        </nav>
+        <nav>
+            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
         </nav>
     </header>
     <main>
@@ -79,49 +84,67 @@
             </tr>
         </table>
 
-        <h3> Employee Data in Complex Table</h3>
-        <table>
-            <tr>
-                <th> Name</th>
-                <th> Email </th>
-                <th> Years of Service </th>
-            </tr>
-            <tr>
-                <td>Emily Anderson</td>
-                <td> emilyanderson2@gmail.com</td>
-                <td> 2 </td>
-            </tr>
-            <tr>
-                <td>Aiden Patel</td>
-                <td> patelaiden2@gmail.com</td>
-                <td> 4 </td>
-            </tr>
-            <tr>
-                <td>Sophia Smith</td>
-                <td> smithsophia34@gmail.com</td>
-                <td> 3 </td>
-            </tr>
-            <tr>
-                <td>Ethan Garcia</td>
-                <td> garciae323@gmail.com</td>
-                <td> 5 </td>
-            </tr>
-            <tr>
-                <td>Olivia Johnson</td>
-                <td> jolivia2@gmail.com</td>
-                <td> 3 </td>
-            </tr>
-            <tr>
-                <td>Liam Martinez</td>
-                <td> martinezl5@gmail.com</td>
-                <td> 2 </td>
-            </tr>
-            <tr>
-                <td>Ava Brown</td>
-                <td> browna8@gmail.com</td>
-                <td> 4 </td>
-            </tr>
-        </table>
+        <figure>
+            <h3> Employee Data in Complex Table</h3>
+            <table>
+                <tr>
+                    <th> Role</th>
+                    <th> Name</th>
+                    <th> Email </th>
+                    <th> Years of Service </th>
+                    <th> Monthly Salary </th>
+                </tr>
+                <tr>
+                    <td rowspan="2"> Intern</td>
+                    <td>Emily Anderson</td>
+                    <td> emilyanderson2@gmail.com</td>
+                    <td> 1 </td>
+                    <td rowspan="2"> $2500</td>
+                </tr>
+                <tr>
+                    <td>Aiden Patel</td>
+                    <td> patelaiden2@gmail.com</td>
+                    <td> 1 </td>
+                </tr>
+                <tr>
+                    <td rowspan="2"> Marketing</td>
+                    <td>Sophia Smith</td>
+                    <td> smithsophia34@gmail.com</td>
+                    <td> 3 </td>
+                    <td rowspan="2"> $6500</td>
+                </tr>
+                <tr>
+                    <td>Ethan Garcia</td>
+                    <td> garciae323@gmail.com</td>
+                    <td> 5 </td>
+                </tr>
+                <tr>
+                    <td rowspan="2"> Sales</td>
+                    <td>Olivia Johnson</td>
+                    <td> jolivia2@gmail.com</td>
+                    <td> 3 </td>
+                    <td rowspan="2"> $8000</td>
+                </tr>
+                <tr>
+                    <td>Liam Martinez</td>
+                    <td> martinezl5@gmail.com</td>
+                    <td> 2 </td>
+                </tr>
+                <tr>
+                    <td> Manager </td>
+                    <td>Ava Brown</td>
+                    <td> browna8@gmail.com</td>
+                    <td> 7 </td>
+                    <td> $12000</td>
+                </tr>
+                <tr>
+                    <td colspan="3"> Total Years of Service</td>
+                    <td> 22</td>
+                    <td> $46000</td>
+                </tr>
+            </table>
+            <figcaption> Employee Information</figcaption>
+        </figure>
     </main>
     <footer>
         <nav>
