--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -21,43 +21,65 @@
             <a href="tables.html">Tables</a>
             ||
             <a href="forms.html">Forms</a>
+            ||
+            <a href="website_evaluation.html">Website Evaluation</a>
+        </nav>
+        <nav>
+            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
         </nav>
     </header>
     <main>
-        <h2 id="title">Form</h2>
-        <p id="description">Please complete this form for feedback on Patel Enterprises.</p>
         <form id="survey-form">
+            <h2 id="title">Form</h2>
+            <p id="description">Please complete this form with the required information.</p>
 
-            <label id="name-label">Enter your Name:<input id="name" type="text" required placeholder="Name" />
+            <div>
+                <label id="name-label">Enter your Name:<input id="name" type="text" required placeholder="Name"></label>
+            </div>
 
-                <label id="email-label">Enter your Email:<input id="email" type="email" required placeholder="Email" />
+            <div>
+                <label id="email-label">Enter your Email:<input id="email" type="email" required
+                        placeholder="Email"></label>
+            </div>
 
-                    <label id="number-label">Enter Your Phone Number:<input id="number" type="number" required placeholder="Phone Number"
-                            min="10000000" max="1000000" />
+            <div>
+                <label id="number-label">Enter Your Phone Number:<input id="number" type="number" required
+                        placeholder="Phone Number" min="10000000" max="1000000"> </label>
+            </div>
 
-                        <label for="dropdown">Select an option:</label>
-                        <select id="dropdown">Which option best describes your current role?
-                            <option>Student</option>
-                            <option>Full Time Job</option>
-                            <option>Full Time Learner</option>
-                            <option>Prefer not to say</option>
-                            <option>Other</option>
-                        </select>
-                        <label>Would you recommend Patel Enterprises to a friend?</label>
-                        <input type="radio" name="recommendation" value="yes" id="yes">
-                        <label for="yes">Yes</label>
-                        <input type="radio" name="recommendation" value="no" id="no">
-                        <label for="no">No</label>
-                        <input type="radio" name="recommendation" value="maybe" id="maybe">
-                        <label for="maybe">Maybe</label>
+            <div>
+            <label for="dropdown">Select an option:</label>
+        </div>
 
-                        <label>What would you like to see improved?</label>
-                        <input type="checkbox" name="recommendation" value="yes" id="Front-end Projects">
-                        <label for="yes">Front-end Projects</label>
-                        <input type="checkbox" name="recommendation" value="no" id="Back-end Projects">
-                        <label for="no">Back-end Projects</label>
-        </form>
-        <button id="submit">Submit</button>
+        <div>
+            <select id="dropdown">Which option best describes your current role?
+                <option>Student</option>
+                <option>Full Time Job</option>
+                <option>Part Time Job</option>
+                <option>Prefer not to say</option>
+                <option>Other</option>
+            </select>
+        </div>
+
+        <div>
+            <label>Would you recommend Patel Enterprises to a friend?</label>
+            <input type="radio" name="recommendation" value="yes" id="yes">
+            <label for="yes">Yes</label>
+            <input type="radio" name="recommendation" value="no" id="no">
+            <label for="no">No</label>
+            <input type="radio" name="recommendation" value="maybe" id="maybe">
+            <label for="maybe">Maybe</label>
+        </div>
+
+        <div>
+            <label>What would you like to see improved?</label>
+            <input type="checkbox" name="recommendation" value="yes" id="Front-end Projects">
+            <label for="yes">Front-end Projects</label>
+            <input type="checkbox" name="recommendation" value="no" id="Back-end Projects">
+            <label for="no">Back-end Projects</label>
+        </div>
+            <button id="submit"><input type="submit"></button>
+            <button id="submit"><input type="reset"></button>
         </form>
     </main>
     <footer>
