--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -12,15 +12,20 @@
     <header>
         <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
-            <a href="./"> Home</a>
+            <a href = "./"> Home</a>
             ||
-            <a href="introduction.html"> Introduction </a>
+            <a href = "introduction.html"> Introduction </a>
             ||
-            <a href="contract.html">Contract</a>
+            <a href = "contract.html">Contract</a>
             ||
             <a href="tables.html">Tables</a>
             ||
             <a href="forms.html">Forms</a>
+            ||
+            <a href="website_evaluation.html">Website Evaluation</a>
+        </nav>
+        <nav>
+            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
         </nav>
     </header>
     <main>
