--- a/itis3135/website_evaluation.html
+++ b/itis3135/website_evaluation.html
@@ -12,15 +12,20 @@
     <header>
         <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
         <nav>
-            <a href="./"> Home</a>
+            <a href = "./"> Home</a>
             ||
-            <a href="introduction.html"> Introduction </a>
+            <a href = "introduction.html"> Introduction </a>
             ||
-            <a href="contract.html">Contract</a>
+            <a href = "contract.html">Contract</a>
             ||
             <a href="tables.html">Tables</a>
             ||
             <a href="forms.html">Forms</a>
+            ||
+            <a href="website_evaluation.html">Website Evaluation</a>
+        </nav>
+        <nav>
+            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
         </nav>
     </header>
     <main>
@@ -43,7 +48,7 @@
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
         </nav>
-        <p> <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023 </a>
+        <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
             <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
                     src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
@@ -53,7 +58,6 @@
                 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!">
             </a>
-        </p>
     </footer>
 </body>
 
