--- a/itis3135/website_evaluation.html
+++ b/itis3135/website_evaluation.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1> Jay Patel || Jubilant Panther || ITIS 3135</h1>
+        <h1> Jay Patel's Jubilant Panther || ITIS 3135</h1>
         <nav>
             <a href = "./"> Home</a>
             ||
@@ -29,7 +29,20 @@
         </nav>
     </header>
     <main>
-        <h1>Website Evaluation</h1>
+        <h2>Website Evaluation</h2>
+        <section>
+            <h3><a href="https://beta.reddit.com"> Worst Website</a></h3>
+            <p>The beta version of Reddit was launched for users to test new features, functions, and design changes but it currently looks to be in an abandoned state. This website does not follow CRAP principles.</p>
+            <ul>
+                <li>C - Contrast</li>
+                <p>Contrast could be improved by making certain elements more visually distinguishable. </p>
+                <li>R - Repetition</li>
+                <p>The homepage of the website shows recommended reddit posts all over the webpage without much variation in terms of content.</p>
+                <li>A - Alignment</li>
+                <p>The </p>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <nav>
