--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <figure>
-            <img src="images/meinquebec.jpeg" width="200" height="200">
+            <img src="images/meinquebec.jpeg" width="200" height="200" class="centered-image">
             <figcaption class="caption-italic">Jubilant Panther</figcaption>
         </figure>
         <h1> Introduction</h1>
