--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -30,7 +30,7 @@
         <h2> Home </h2>
         <p> This is all the content for my ITIS 3135 class.</p>
     </main>
-    <footer> 
+    <footer>
         <nav>
             <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
             ||
@@ -45,9 +45,10 @@
             <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
             ||
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
-        
+
         </nav>
-        <p> <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023 </a>
+        <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
+        <br>
             <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
                     src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
@@ -57,7 +58,6 @@
                 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!">
             </a>
-        </p>
     </footer>
 </body>
 </html>
