--- a/itis3135/website_evaluation.html
+++ b/itis3135/website_evaluation.html
@@ -29,6 +29,7 @@
         </nav>
     </header>
     <main>
+        <br>
         <h2>Website Evaluation</h2>
         <section>
             <h3><a href="https://beta.reddit.com"> Worst Website</a></h3>
@@ -39,7 +40,23 @@
                 <li>R - Repetition</li>
                 <p>The homepage of the website shows recommended reddit posts all over the webpage without much variation in terms of content.</p>
                 <li>A - Alignment</li>
-                <p>The </p>
+                <p>The alignemnt for the reddit posts displayed on the homepage is not properly akigned making it hard for the user to focus on a single post.</p>
+                <li>P - Proximity</li>
+                <p>All the posts are closely together which may lead to confusion.</p>
+            </ul>
+        </section>
+        <section>
+            <h3><a href="https://www.apple.com"> Best Website</a></h3>
+            <p>Apple is a technology company, famous for its innovative consumer electronics, software, tech, and services, including iPhone, iPad, and macOS. This website does follow CRAP principles.</p>
+            <ul>
+                <li>C - Contrast</li>
+                <p>Apple uses sharp contrasts in high-quality images to emphasize product details, enhancing visual appeal and engagement. </p>
+                <li>R - Repetition</li>
+                <p>Consistent branding and navigation elements, ensuring a seamless user experience.</p>
+                <li>A - Alignment</li>
+                <p>Grid layout and precise content alignment create a clean, organized, and visually appealing website design.</p>
+                <li>P - Proximity</li>
+                <p>Grouping related content enhances user decision-making, while effective white space usage promotes order and hierarchy.</p>
             </ul>
         </section>
 
@@ -62,6 +79,7 @@
 
         </nav>
         <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
+        <br>
             <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
                     src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
