--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -163,7 +163,8 @@
             <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
         </nav>
-        <p> <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023 </a>
+        <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
+        <br>
             <a href="https://validator.w3.org/check?uri=referer">
                 <img style="border:0;width:88px;height:31px"
                     src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
@@ -173,7 +174,6 @@
                 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!">
             </a>
-        </p>
     </footer>
 </body>
 
