--- a/itis3135/patel-enterprises.com/index.html
+++ b/itis3135/patel-enterprises.com/index.html
@@ -1,27 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>patel-enterprises.com</title>
-    <link rel="stylesheet" href="styles/default.css">
+    <style>
+        header {
+            background-color: #61C9A8;
+            color: #39393A;
+            text-align: center;
+        }
+
+        body {
+            background-color: #61C9A8;
+            color: #FFEEDB;
+        }
+
+        .list {
+            list-style-type: upper-alpha;
+        }
+
+        .contact-block {
+            border: 2px solid #333;
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 10px;
+        }
+        footer{
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <h1 style="text-align: center;"> Patel Enterprises</h1>
+        <h1> Patel Enterprises <img src="images/P.png"></h1>
     </header>
-    <main> 
-        <h2 style="text-align: center;"> Home</h2>
-        <p> This is where the content to my software company website will go.</p>
+    <main>
+        <h2> Patel Enterprises Services</h2>
+        <p>Welcome to Patel Enterprises, your trusted partner for all your financial needs. With a team of experienced
+            professionals, we are committed to delivering accurate and reliable accounting services to individuals. </p>
+        <h2>Our Services</h2>
+        <ul class="list">
+            <li>
+                Debt Management
+            </li>
+            <li>
+                Tax Planning and Preparation
+            </li>
+            <li>
+                Retirement Planning
+            </li>
+            <li>
+                Investment Advising
+            </li>
+            <li>
+                Insurance
+            </li>
+        </ul>
+        <h2>Our Promise</h2>
+        <p>At Patel Enterprises, we are dedicated to providing you with personalized financial solutions that align with
+            your goals and aspirations. Whether you need assistance with tax planning, retirement savings, or financial
+            consulting, we are here to help you achieve financial success and peace of mind.</p>
+        <section class="contact-block">
+            <h2>Contact Us</h2>
+            <p>
+                If you have any questions or would like to discuss your financial needs, please contact us:
+            </p>
+            <p>
+                Email: accountingservices@patelenterprises.com<br>
+                Phone: 456-325-7894<br>
+                Address: 456 Finance Avenue, Cary, NC USA
+            </p>
+        </section>
     </main>
-    <footer> 
-        <p> Patel Enterprises © 2023<a href="https://validator.w3.org/check?uri=referer">
-            <img style="border:0;width:88px;height:31px" src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413" alt="Valid HTML!">
+    <footer>
+        <p> Patel Enterprises © 2023
+            <br>
+            <a href="https://validator.w3.org/check?uri=referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
+                    alt="Valid HTML!">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!">
             </a>
         </p>
     </footer>
 </body>
+
 </html>
