--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -12,17 +12,19 @@
     <header>
         <h1> Jay Patel's Jubilant Panther || ITIS 3135</h1>
         <nav>
-            <a href="./"> Home</a>
-            ||
-            <a href="introduction.html"> Introduction </a>
-            ||
-            <a href="contract.html">Contract</a>
-            ||
+            <a href = "./"> Home</a>
+            |
+            <a href = "introduction.html"> Introduction </a>
+            |
+            <a href = "contract.html">Contract</a>
+            |
             <a href="tables.html">Tables</a>
-            ||
+            |
             <a href="forms.html">Forms</a>
-            ||
+            |
             <a href="website_evaluation.html">Website Evaluation</a>
+            |
+            <a href="firstscripts.html">First JS</a>
         </nav>
         <nav>
             <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
