--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -10,25 +10,7 @@
 
 <body>
     <header>
-        <h1> Jay Patel's Jubilant Panther || ITIS 3135</h1>
-        <nav>
-            <a href = "./"> Home</a>
-            |
-            <a href = "introduction.html"> Introduction </a>
-            |
-            <a href = "contract.html">Contract</a>
-            |
-            <a href="tables.html">Tables</a>
-            |
-            <a href="forms.html">Forms</a>
-            |
-            <a href="website_evaluation.html">Website Evaluation</a>
-            |
-            <a href="firstscripts.html">First JS</a>
-        </nav>
-        <nav>
-            <a href="stuff/HDBHS$! 67.html">Crappy Webpage</a>
-        </nav>
+        <div data-include="components/header.html"></div>
     </header>
     <main>
         <h2> HTML Tables</h2>
@@ -149,34 +131,9 @@
         </figure>
     </main>
     <footer>
-        <nav>
-            <a href="https://webpages.charlotte.edu/jpate152/"> CLT Webpage</a>
-            ||
-            <a href="https://github.com/jayp-8"> Github</a>
-            ||
-            <a href="https://jayp-8.github.io"> Github.io</a>
-            ||
-            <a href="https://jayp-8.github.io/itis3135/"> ITIS3135.io</a>
-            ||
-            <a href="https://www.freecodecamp.org/jayp-8"> FreeCodeCamp </a>
-            ||
-            <a href="https://www.codecademy.com/profiles/jayp-8"> CodeAcademy</a>
-            ||
-            <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
-
-        </nav>
-        <a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
-        <br>
-            <a href="https://validator.w3.org/check?uri=referer">
-                <img style="border:0;width:88px;height:31px"
-                    src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png?20130208111413"
-                    alt="Valid HTML!">
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!">
-            </a>
+        <div data-include="components/footer.html"></div>
     </footer>
+    <script src="scripts/include.js"></script>
 </body>
 
 </html>
