--- a/itis3135/firstscripts.html
+++ b/itis3135/firstscripts.html
@@ -31,6 +31,13 @@
             <br>
             <button type="button" id="getPolygonButton" onclick="displayPolygonName()">Get Your Polygon</button>
         </form>
+        <br>
+
+        <button type="button" id="feedPanther" onclick="feedPanther()">Feed the panther!</button>
+        <button type="button" id="insult" onclick="insult()">Click for an insult</button>
+        <button type="button" id="findTip" onclick="findTip()">Calculate order after 15% tip</button>
+        <button type="button" id="sumOfTwoNumbers" onclick="sumOfTwoNumbers()">Find sum of two numbers</button>
+
         <div id="greeting"></div>
     </main>
     <footer>
