--- a/itis3135/patel-enterprises.com/index.html
+++ b/itis3135/patel-enterprises.com/index.html
@@ -30,12 +30,16 @@
         footer{
             text-align: center;
         }
+        img{
+            width: 50px;
+            height: 50px;
+        }
     </style>
 </head>
 
 <body>
     <header>
-        <h1> Patel Enterprises <img src="images/P.png"></h1>
+        <h1> Patel Enterprises <img src="/images/P.png"></h1>
     </header>
     <main>
         <h2> Patel Enterprises Services</h2>
